--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-popover": "^1.1.10",
     "@radix-ui/react-slot": "^1.1.0",
     "@rematch/core": "^2.2.0",
     "class-variance-authority": "^0.7.0",
